--- a/vignettes/simulation_study.Rmd
+++ b/vignettes/simulation_study.Rmd
@@ -5,6 +5,7 @@ output:
   rmarkdown::html_vignette:
     toc: true
     toc_depth: 3
+    code_folding: show
 vignette: >
   %\VignetteIndexEntry{4. Conduct a simulation study}
   %\VignetteEngine{knitr::rmarkdown}
@@ -14,7 +15,11 @@ vignette: >
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#"
+  comment = "#",
+  fig.width = 5,
+  fig.height = 3,
+  dpi = 120,
+  fig.align = "center"
 )
 options(rmarkdown.html_vignette.check_title = FALSE)
 ```
@@ -51,19 +56,18 @@ create_simulation_obj(
 `data_matrix_list` is where you input the data you will be using for the
 simulation study using the function `sim_data_list()`.
 Let's simulate some data together for the sake of example.
-We'll use the `simsurv` package to generate survival data under two
-scenarios: a true hazard ratio (HR) for the treatment effect of 0.6 and a true
-HR of 0.8.
+We'll use the `simsurv` package to generate survival data under three
+scenarios: a true hazard ratio (HR) for the treatment effect of 0.6, 0.8, and 1.0.
+Similarly we'll look at three drift HR scenarios: 0.5, 1.0, and 1.5.
 
 ### `data_list`
 
 Looking at the arguments to `sim_data_list()`, the first argument, `data_list`
 requires a list of lists of matrices. Each list of matrices should represent
 a different data generation scenario, such as our difference true HR.
-Therefore, let's create an object `data_list` that is length two:
-one list for a HR of 0.6, and one for a HR of 0.8. Within
-these lists, we can provide any number of matrices. We'll
-do 10 in this example.
+Therefore, let's create an object `data_list` that is considers all combinations
+of true HRs of 0.6, 0.8, and 1.0 and drift HRs of 0.5, 1.0, and 1.5. That gives us
+9 total scenarios, and we'll simulate 20 datasets within each scenario.
 
 ```{r}
 library(simsurv)
@@ -105,8 +109,15 @@ set.seed(112233)
 
 # Create data list
 data_list <- list(
-  lapply(1:10, function(z) sim_single_matrix(true_hr = 0.6)),
-  lapply(1:10, function(z) sim_single_matrix(true_hr = 0.8))
+  lapply(1:20, function(z) sim_single_matrix(true_hr = 0.6)),
+  lapply(1:20, function(z) sim_single_matrix(true_hr = 0.8)),
+  lapply(1:20, function(z) sim_single_matrix(true_hr = 1.0)),
+  lapply(1:20, function(z) sim_single_matrix(true_hr = 0.6, drift_hr = 1.5)),
+  lapply(1:20, function(z) sim_single_matrix(true_hr = 0.8, drift_hr = 1.5)),
+  lapply(1:20, function(z) sim_single_matrix(true_hr = 1.0, drift_hr = 1.5)),
+  lapply(1:20, function(z) sim_single_matrix(true_hr = 0.6, drift_hr = 0.5)),
+  lapply(1:20, function(z) sim_single_matrix(true_hr = 0.8, drift_hr = 0.5)),
+  lapply(1:20, function(z) sim_single_matrix(true_hr = 1.0, drift_hr = 0.5))
 )
 ```
 
@@ -135,17 +146,18 @@ that the external control arm experiences greater hazard than the internal
 control arm.
 * The name of a column that indexes the `data_list`
 
-In our study, the drift HR was 1.0. We varied the true HR so that it took
-two values: 0.6 and 0.8. Our guide should therefore be two rows to represent
-the two scenarios. We pass `c(1L, 2L)` onto `index` to clarify that
-`data_list[[1L]]` corresponds to the settings in the first row and
-`data_list[[2L]]` to the second row.
+We varied the true HR so that it took
+three values: 0.6, 0.8, and 1.0. We also varied  the drift HR so it took three
+values: 0.5, 1.0, and 1.5. Our guide should therefore be nine rows to represent
+the nine scenarios. We pass `c(1L, 2L, 3L, 4L, 5L, 6L, 7L, 8L, 9L)` onto `index`
+to clarify that `data_list[[1L]]` corresponds to the settings in the first row,
+`data_list[[2L]]` to the second row, and so on.
 
 ```{r}
 guide <- data.frame(
-  trueHR = c(0.6, 0.8),
-  driftHR = c(1.0, 1.0),
-  index = c(1L, 2L)
+  trueHR = rep(c(0.6, 0.8, 1.0), 3),
+  driftHR = rep(c(1.0, 1.5, 0.5), each = 3),
+  index = 1L:9L
 )
 
 guide
@@ -193,10 +205,9 @@ out
 `borrowing` is where we input information on the type of borrowing we want to
 evaluate. This can be either a single object of class `Borrowing` or
 a list of objects created with `sim_borrowing_list()`. For the sake of example,
-let's assume we are interested in comparing four borrowing scenarios:
+let's assume we are interested in comparing three borrowing scenarios:
 
 * No borrowing
-* Full borrowing
 * BDB, conservative prior
 * BDB, aggressive prior
 
@@ -206,13 +217,13 @@ We will create a borrowing list with `sim_borrowing_list()`.
 sbl <- sim_borrowing_list(
   list(
     "No borrowing" = borrowing_details("No borrowing", "ext"),
-    "Full borrowing" = borrowing_details("Full borrowing", "ext"),
     "BDB, conservative prior" = borrowing_details("BDB", "ext", gamma_prior(0.001, 0.001)),
     "BDB, aggressive prior" = borrowing_details("BDB", "ext", gamma_prior(1.000, 0.001))
   )
 )
 sbl
 ```
+
 
 ## `covariate`
 
@@ -241,11 +252,11 @@ ready to sample on our behalf.
 
 ***Important:*** `psborrow2` will simulate the Cartesian product of all
 unique list elements in `data_matrix_list`, `outcome`, `borrowing`,
-`covariate`, and `treatment`. `data_matrix_list` contains two
-different study parameters and therefore contains a list of length two.
-`borrowing` has four scenarios and is a list of length four. The rest
+`covariate`, and `treatment`. `data_matrix_list` contains nine
+different study parameters and therefore contains a list of length nine.
+`borrowing` has three scenarios and is a list of length three. The rest
 contain just one input (or 0 for `covariate`, which is equivalent to one
-scenario). This means we should expect $2 \times 4 = 8$ combinations of
+scenario). This means we should expect $9 \times 3 = 27$ combinations of
 parameters. Let's create a simulation object of class `Simulation`:
 
 ```{r}
@@ -258,6 +269,9 @@ sim_obj <- create_simulation_obj(
 sim_obj
 ```
 
+While we get a warning about the size of the simulation study, we are not worried
+because we are limiting our MCMC samples below in this example.
+
 We can access the guide to see the specific scenarios that will be
 simulated with `show_guide()`:
 
@@ -268,19 +282,38 @@ show_guide(sim_obj)
 ## `mcmc_sample()`
 
 Now that we've created a simulation object, we're ready to call `mcmc_sample()`
-and generate draws for our model. For now, we will stick with the default inputs:
+and generate draws for our model. For now, we will stick with the default inputs.
 
+***Note*** unlike an analysis on a single dataset, `mcmc_sample()` does not
+return a `CmdStanModel` object when applied to a simulation study object.
+Instead, it returns a class unique to simulation study results:
+`MCMCSimulationResult`.
+
+***Note*** there is one important additional argument to `mcmc_sample()` for
+simulation objects: `posterior_quantiles`. This numeric vector of length 2
+specifies the quantiles for null coverage and true coverage. For instance,
+95% credible coverage would be estimated with
+`posterior_quantiles = c(0.025, 0.975)`, the default argument.
 
 ```{r, include = FALSE}
 st <- Sys.time()
-results <- mcmc_sample(sim_obj,
+results <- mcmc_sample(
+  sim_obj,
+  posterior_quantiles = c(0.025, 0.975),
+  iter_warmup = 400,
+  iter_sampling = 1000,
+  chains = 1L,
   seed = 112233
 )
 en <- Sys.time()
 ```
 
 ```{r, eval = FALSE}
-results <- mcmc_sample(sim_obj,
+results <- mcmc_sample(
+  sim_obj,
+  iter_warmup = 400,
+  iter_sampling = 1000,
+  chains = 1L,
   seed = 112233
 )
 ```
@@ -291,5 +324,90 @@ that summarizes results, `get_results()`:
 
 ```{r}
 results_df <- get_results(results)
-print(results_df)
+head(results_df)
 ```
+
+Let's quickly visualize the results using `ggplot2`:
+
+## Summary of results
+
+As an example of the types of visual summaries you can provide on simulation
+study results, let's explore performance of several some select metrics:
+
+### MSE
+
+```{r class.source = "fold-hide", fig.dim = c(5, 3), dpi = 140}
+library(ggplot2)
+ggplot(results_df) +
+  geom_bar(aes(x = factor(trueHR), fill = borrowing_scenario, y = mse_mean), stat = "identity", position = "dodge") +
+  labs(
+    fill = "Borrowing scenario",
+    x = "True HR",
+    y = "MSE (mean)"
+  ) +
+  facet_wrap(~ paste0("drift HR = ", driftHR)) +
+  scale_fill_manual(values = c("#29339B", "#74A4BC", "#B6D6CC"))
+```
+
+From this graph, it is clear that the impact of aggressive borrowing
+depends greatly on the drift HR between the internal and external controls.
+
+### Null coverage
+
+Null coverage refers to the proportion of specified credible intervals
+(in this case, 95% credible intervals) that contain the null effect (1.0).
+When the true hazard ratio is not 1.0, this refers to the type II error proportion.
+
+```{r class.source = "fold-hide", fig.dim = c(5, 3), dpi = 140}
+ggplot(results_df[results_df$trueHR != 1.0, ]) +
+  geom_bar(aes(x = factor(trueHR), fill = borrowing_scenario, y = null_coverage),
+    stat = "identity", position = "dodge"
+  ) +
+  labs(
+    fill = "Borrowing scenario",
+    x = "True HR",
+    y = "Type II error"
+  ) +
+  facet_wrap(~ paste0("drift HR = ", driftHR)) +
+  scale_fill_manual(values = c("#29339B", "#74A4BC", "#B6D6CC"))
+```
+
+The type II error proportion is higher when the true hazard ratio is 0.8 and
+generally when no borrowing is used.
+
+When the true hazard ratio is equal to 1.0, this refers to the compliment of
+the type I error proportion, which we can use to derive type I error:
+
+```{r class.source = "fold-hide", fig.dim = c(5, 3), dpi = 140}
+ggplot(results_df[results_df$trueHR == 1.0, ]) +
+  geom_bar(aes(x = factor(driftHR), fill = borrowing_scenario, y = 1 - null_coverage),
+    stat = "identity", position = "dodge"
+  ) +
+  labs(
+    fill = "Borrowing scenario",
+    x = "drift HR",
+    y = "Type I error"
+  ) +
+  scale_fill_manual(values = c("#29339B", "#74A4BC", "#B6D6CC"))
+```
+
+### True coverage
+
+True coverage refers to the proportion of simulations that contain
+the effect estimate of interest.
+
+```{r class.source = "fold-hide", fig.dim = c(5, 3), dpi = 140}
+ggplot(results_df) +
+  geom_bar(aes(x = factor(trueHR), fill = borrowing_scenario, y = true_coverage),
+    stat = "identity", position = "dodge"
+  ) +
+  labs(
+    fill = "Borrowing scenario",
+    x = "True HR",
+    y = "True coverage"
+  ) +
+  facet_wrap(~ paste0("drift HR = ", driftHR)) +
+  scale_fill_manual(values = c("#29339B", "#74A4BC", "#B6D6CC"))
+```
+
+It looks like almost all of our analyses captured the effect estimate of interest.
